syntax = "proto3";

package betting;
option go_package ="proto/betting";


message BettingMessageRequest {
    int64 accountId  = 1;
    int64 amount      = 2;
    int64 betId       = 3;
    int64 transactionId = 4;
    int64 timestamp  = 5;
}

message BettingResponse {
    int64 code = 1;
    string message = 2;
}

service BettingService {
    rpc CreateBetting(BettingMessageRequest) returns (BettingResponse);
}
